5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1594_1801.log
== TEST (2019-04-02 13:33:10) 
-- CODE:
n1 = input("nome do objeto:")
n2 = input("repeticoes do objeto:" )

feitico = (n1*4)
print(feitico)
-- OUTPUT:
livrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:33:53) 
-- CODE:
n1 = input("nome do objeto:")
n2 = input(int("repeticoes do objeto:" )

feitico = (n1*4)
print(feitico)
-- EXECUTION TIME:
0.151795
-- ERROR:
  File "/home/codebench/codes/1594/1801/main.py", line 4
    feitico = (n1*4)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:34:11) 
-- CODE:
n1 = input("nome do objeto:")
n2 = input(int("repeticoes do objeto:" )

feitico = (n1*4)
print(feitico)
-- ERROR:
File "XXXX", line 4
    feitico = (n1*4)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:34:25) 
-- CODE:
n1 = input("nome do objeto:")
n2 = input(int("repeticoes do objeto:" )

feitico = input(n1*4)
print(feitico)
-- ERROR:
File "XXXX", line 4
    feitico = input(n1*4)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:35:11) 
-- CODE:
n1 = input("nome do objeto:")
n2 = input(int("repeticoes do objeto:" )

feitico = float(input((n1*4))
print(feitico)
-- ERROR:
File "XXXX", line 4
    feitico = float(input((n1*4))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:35:25) 
-- CODE:
n1 = input("nome do objeto:")
n2 = input(int("repeticoes do objeto:" )

feitico = float(input(int((n1*4)))
print(feitico)
-- ERROR:
File "XXXX", line 4
    feitico = float(input(int((n1*4)))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:36:27) 
-- CODE:
n1 = input("nome do objeto:")
n2 = input(int("repeticoes do objeto:" )

feitico = float(input(n1*n2))
print(feitico)
			  
-- ERROR:
File "XXXX", line 4
    feitico = float(input(n1*n2))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:38:35) 
-- CODE:
n1 = input("nome do objeto:")
n2 = input(int("repeticoes do objeto:" )

m1 = float(input(n1)
m2 = float(input(n2))
f = (m1*m2)
print(f)			  
-- ERROR:
File "XXXX", line 4
    m1 = float(input(n1)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:38:50) 
-- CODE:
n1 = input("nome do objeto:")
n2 = input(int("repeticoes do objeto:" )

m1 = input(n1)
m2 = float(input(n2))
f = (m1*m2)
print(f)			  
-- ERROR:
File "XXXX", line 4
    m1 = input(n1)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:38:55) 
-- CODE:
n1 = input("nome do objeto:")
n2 = input(int("repeticoes do objeto:" )

m1 = input(n1)
m2 = float(input(n2))
f = (m1*m2)
print(f)			  
-- EXECUTION TIME:
0.227432
-- ERROR:
  File "/home/codebench/codes/1594/1801/main.py", line 4
    m1 = input(n1)
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:38:55) 
-- CODE:
n1 = input("nome do objeto:")
n2 = input(int("repeticoes do objeto:" )

m1 = input(n1)
m2 = float(input(n2))
f = (m1*m2)
print(f)			  
-- ERROR:
File "XXXX", line 4
    m1 = input(n1)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:39:05) 
-- CODE:
n1 = input("nome do objeto:")
n2 = input(int("repeticoes do objeto:" )

m1 = float(n1)
m2 = float(input(n2))
f = (m1*m2)
print(f)			  
-- ERROR:
File "XXXX", line 4
    m1 = float(n1)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:39:07) 
-- CODE:
n1 = input("nome do objeto:")
n2 = input(int("repeticoes do objeto:" )

m1 = float(n1)
m2 = float(input(n2))
f = (m1*m2)
print(f)			  
-- EXECUTION TIME:
0.139386
-- ERROR:
  File "/home/codebench/codes/1594/1801/main.py", line 4
    m1 = float(n1)
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:39:07) 
-- CODE:
n1 = input("nome do objeto:")
n2 = input(int("repeticoes do objeto:" )

m1 = float(n1)
m2 = float(input(n2))
f = (m1*m2)
print(f)			  
-- ERROR:
File "XXXX", line 4
    m1 = float(n1)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:39:22) 
-- CODE:
n1 = input("nome do objeto:")
n2 = input(int("repeticoes do objeto:" )

m1 = float(input(n1)
m2 = float(input(n2))
f = (m1*m2)
print(f)			  
-- ERROR:
File "XXXX", line 4
    m1 = float(input(n1)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:45:22) 
-- CODE:
n1 = input("nome do objeto:")
n2 = float(int("repeticoes do objeto:" )


-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:48:27) 
-- CODE:
n1 = input("nome_do_objeto:")
n2 = float(int("repeticoes_do_objeto:" )
n3 = input("abra")

feitico = float(int("n3 + n1")
print(input(feitico))					 
-- ERROR:
File "XXXX", line 3
    n3 = input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:49:13) 
-- CODE:
n1 = input("nome_do_objeto:")
n2 = float(int("repeticoes_do_objeto:" )
n3 = float(input("abra")

feitico = float(int("n3 + n1")
print(input(feitico))					 
-- ERROR:
File "XXXX", line 3
    n3 = float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:49:34) 
-- CODE:
n1 = input("nome_do_objeto:")
n2 = float(int("repeticoes_do_objeto:" )
n3 = ("abra")

feitico = float(int("n3 + n1")
print(input(feitico))					 
-- ERROR:
File "XXXX", line 3
    n3 = ("abra")
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:49:49) 
-- CODE:
n1 = input("nome_do_objeto:")
n2 = float(int("repeticoes_do_objeto:" )
n3 = string("abra")

feitico = float(int("n3 + n1")
print(input(feitico))					 
-- ERROR:
File "XXXX", line 3
    n3 = string("abra")
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:50:05) 
-- CODE:
n1 = input("nome_do_objeto:")
n2 = float(int("repeticoes_do_objeto:" )
n3 = ("abra")

feitico = float(int("n3 + n1")
print(input(feitico))					 
-- ERROR:
File "XXXX", line 3
    n3 = ("abra")
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:50:33) 
-- CODE:
n1 = input("nome_do_objeto:")
n2 = float(int("repeticoes_do_objeto:" )
n3 = input("abra")

feitico = float(int("n3 + n1")
print(input(feitico))					 
-- ERROR:
File "XXXX", line 3
    n3 = input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:50:33) 
-- CODE:
n1 = input("nome_do_objeto:")
n2 = float(int("repeticoes_do_objeto:" )
n3 = input("abra")

feitico = float(int("n3 + n1")
print(input(feitico))					 
-- EXECUTION TIME:
0.113394
-- ERROR:
  File "/home/codebench/codes/1594/1801/main.py", line 3
    n3 = input()
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:50:34) 
-- CODE:
n1 = input("nome_do_objeto:")
n2 = float(int("repeticoes_do_objeto:" )
n3 = input("abra")

feitico = float(int("n3 + n1")
print(input(feitico))					 
-- ERROR:
File "XXXX", line 3
    n3 = input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:50:36) 
-- CODE:
n1 = input("nome_do_objeto:")
n2 = float(int("repeticoes_do_objeto:" )
n3 = input("abra")

feitico = float(int("n3 + n1")
print(input(feitico))					 
-- ERROR:
File "XXXX", line 3
    n3 = input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:50:36) 
-- CODE:
n1 = input("nome_do_objeto:")
n2 = float(int("repeticoes_do_objeto:" )
n3 = input("abra")

feitico = float(int("n3 + n1")
print(input(feitico))					 
-- ERROR:
File "XXXX", line 3
    n3 = input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:50:36) 
-- CODE:
n1 = input("nome_do_objeto:")
n2 = float(int("repeticoes_do_objeto:" )
n3 = input("abra")

feitico = float(int("n3 + n1")
print(input(feitico))					 
-- ERROR:
File "XXXX", line 3
    n3 = input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:50:36) 
-- CODE:
n1 = input("nome_do_objeto:")
n2 = float(int("repeticoes_do_objeto:" )
n3 = input("abra")

feitico = float(int("n3 + n1")
print(input(feitico))					 
-- ERROR:
File "XXXX", line 3
    n3 = input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:53:57) 
-- CODE:
n1 = input("nome_do_objeto:")
n2 = float(int("repeticoes_do_objeto:" )
n3 = float(input("abra")

feitico = float(int("n3 + n1")
print(input(feitico))					 
-- ERROR:
File "XXXX", line 3
    n3 = float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:55:21) 
-- CODE:
n1 = float(input("nome_do_objeto:"))
n2 = float(int("repeticoes_do_objeto:" )
n3 = input("abra")

feitico = float(int("n3 + n1")
print(input(feitico))					 
-- ERROR:
File "XXXX", line 3
    n3 = input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:55:28) 
-- CODE:
n1 = float(input("nome_do_objeto:"))
n2 = float(int("repeticoes_do_objeto:" )


feitico = float(int("n3 + n1")
print(input(feitico))					 
-- ERROR:
File "XXXX", line 5
    feitico = float(int("n3 + n1")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:55:43) 
-- CODE:
n1 = float(input("nome_do_objeto:"))
n2 = float(int("repeticoes_do_objeto:" )


feitico = float(int("n2 + n1")
print(input(feitico))					 
-- ERROR:
File "XXXX", line 5
    feitico = float(int("n2 + n1")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:55:47) 
-- CODE:
n1 = float(input("nome_do_objeto:"))
n2 = float(int("repeticoes_do_objeto:" )


feitico = float(int("n2 + n1")
print(input(feitico))					 
-- ERROR:
File "XXXX", line 5
    feitico = float(int("n2 + n1")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:19:52) 
-- CODE:
n1 = str(input("nome_do_objeto:"))
n2 = int(input("repeticoes_do_objeto:" )
n3 = "abra" + n1
n4 = n3*n2			

print(n4)					 
-- ERROR:
File "XXXX", line 3
    n3 = "abra" + n1
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:20:08) 
-- CODE:
n1 = str(input("nome_do_objeto:"))
n2 = int(input("repeticoes_do_objeto:" )
n3 = " abra " + n1
n4 = n3*n2			

print(n4)					 
-- ERROR:
File "XXXX", line 3
    n3 = " abra " + n1
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:20:54) 
-- CODE:
n1 = str(input("nome do objeto:"))
n2 = int(input("repeticoes do objeto:" )
n3 = " abra " + n1
n4 = n3*n2			

print(n4)					 
-- ERROR:
File "XXXX", line 3
    n3 = " abra " + n1
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:21:36) 
-- CODE:
a = str(input("nome do objeto:"))
b = int(input("repeticoes do objeto:" )
c = " abra " + a
d = c*b			

print(d)					 
-- ERROR:
File "XXXX", line 3
    c = " abra " + a
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:22:54) 
-- CODE:
a = str(input("nome do objeto:"))
b = int(input("repeticoes do objeto:" )
c = "abra" + ("a")
d = c*b			

print(d)					 
-- ERROR:
File "XXXX", line 3
    c = "abra" + ("a")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:22:55) 
-- CODE:
a = str(input("nome do objeto:"))
b = int(input("repeticoes do objeto:" )
c = "abra" + ("a")
d = c*b			

print(d)					 
-- ERROR:
File "XXXX", line 3
    c = "abra" + ("a")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:22:55) 
-- CODE:
a = str(input("nome do objeto:"))
b = int(input("repeticoes do objeto:" )
c = "abra" + ("a")
d = c*b			

print(d)					 
-- EXECUTION TIME:
0.140976
-- ERROR:
  File "/home/codebench/codes/1594/1801/main.py", line 3
    c = "abra" + ("a")
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:23:06) 
-- CODE:
a = str(input("nome do objeto:"))
b = int(input("repeticoes do objeto:" )
c = "abra" + ("a")
d = c*b			

print(d)					 
-- ERROR:
File "XXXX", line 3
    c = "abra" + ("a")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:23:13) 
-- CODE:
a = str(input("nome do objeto:"))
b = int(input("repeticoes do objeto:" )
c = "abra" + ("a")
d = c*b			

print(d)					 
-- ERROR:
File "XXXX", line 3
    c = "abra" + ("a")
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:23:44) 
-- CODE:
a = str(input("nome do objeto:"))
b = int(input("repeticoes do objeto:" )
c = abra + "a"
d = c*b			

print(d)					 
-- ERROR:
File "XXXX", line 3
    c = abra + "a"
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:28:08) 
-- CODE:
a = str(input("nome do objeto:"))
b = int(input("repeticoes do objeto:" )
x = " abra " + a
z = x*b			

print(z)					 
-- ERROR:
File "XXXX", line 3
    x = " abra " + a
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:28:37) 
-- CODE:
a = str(input("nome do objeto:"))
b = int(input("repeticoes do objeto:" )
x = " Abra " + a
z = x*b			

print(z)					 
-- ERROR:
File "XXXX", line 3
    x = " Abra " + a
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:29:59) 
-- CODE:
a = str(input("nome do objeto:"))
b = int(input("repeticoes do objeto:"))
x = " Abra " + a
z = x*b			

print(z)					 
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:30:20) 
-- CODE:
a = str(input("nome do objeto:"))
b = int(input("repeticoes do objeto:"))
x = " Abra " + a
z = x*b			

print(z)					 
-- EXECUTION TIME:
0.164952
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:51:47) 
-- CODE:
a = input("nome do objeto:")
b = int(input("repeticoes do objeto:"))
x = " Abra " + a
z = x*b			

print(z)					 
-- EXECUTION TIME:
0.114891
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:16:08) 
-- CODE:
a = input("nome do objeto:")
b = int(input("repeticoes do objeto:"))
x = " Abra " + a
z = x*b			

print(z)					 
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
